# quasar

./: .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  index.html  mkdocs.yml
docs/: docs.md  extra.css  index.html  index.md  inspiration.md  install.md
example/: README.md  chr22-n100.pgen  chr22-n100.psam  chr22-n100.pvar  run-quasar.sh
external_libs/brent/: brent_fmin.hpp
inspiration/: index.html
install/: index.html
search/: search_index.json
site/: 404.html  extra.css  index.html
site/docs/: index.html
site/inspiration/: index.html
site/install/: index.html
site/search/: search_index.json
src/: Data.cpp  Data.hpp  Family.hpp  GLM.hpp  GLMFitter.hpp  GLMM.hpp  GLMMFitter.hpp  Geno.cpp  Geno.hpp  IntQTLMapping.cpp  IntQTLMapping.hpp  LM.h  LM.hpp  LMM.hpp  LMMFitter.hpp  ModelFit.cpp  ModelFit.hpp  NBGLM.hpp  NBGLMM.hpp  Phi.cpp  Phi.hpp  ProgramData.cpp  ProgramData.hpp  QTLMapping.cpp  QTLMapping.hpp  QTLMappingUtils.cpp  QTLMappingUtils.hpp  QTLmapping.cpp  QTLmapping.hpp  Quasar.cpp  Quasar.hpp  Regions.cpp  Regions.hpp  Resid.cpp  Resid.hpp  Residualise.cpp  Residualise.hpp  ScoreTest.cpp  ScoreTest.hpp  Utils.cpp  (+4 more)
tests/: test_smoke.cpp
